# galois_theory

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.hypothesis/constants/: 3c5ec57a0867f272  b01f218d7d94bd99  cd85e5a5cb4dfa80
doc/: implementation_methodology.md  phase1_abstract_algebra_foundations.md  phase2_polynomial_rings.md  phase5_galois_groups.md  phase6_solvability_test.md
docs/: galois_theory_implementation_guide.md  phase3_field_extensions.md  phase4_group_theory.md  polynomial_irreducibility_extensions.md  roadmap.md  technical_specifications.md
src/galois_theory/: __init__.py  field.py  field_extensions.py  group_theory.py  polynomials.py  ring.py  solvability.py
src/galois_theory.egg-info/: SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_environment.py  test_field.py  test_field_extensions.py  test_galois_advanced.py  test_group_theory.py  test_polynomials.py  test_ring.py  test_solvability.py
